# bridge-conditions-ordinal-synergy-xai

./: .gitignore  README.md  pyproject.toml
configs/: dataset.yml  dataset_baseline10.yml  labeling.yml  labeling_continuous.yml  labeling_rank5.yml  model.yml  synergy.yml  synergy_baseline.yml  synergy_fast.yml
configs/datasets/_template_tabular/: README.md  dataset.yml  game_table.yml  labeling.yml  synergy.yml
configs/datasets/academic_success/: dataset.yml  game_table.yml  labeling.yml
configs/datasets/bridge_conditions/: dataset.yml  game_table.yml  game_table_fast.yml  labeling.yml  labeling_continuous.yml  labeling_rank5.yml  model.yml  synergy.yml  synergy_fast.yml
configs/datasets/credit_g/: dataset.yml  game_table.yml  labeling.yml  synergy.yml
configs/datasets/crop/: dataset.yml  game_table_full.yml  labeling.yml
configs/datasets/crop_policy/: dataset.yml
configs/datasets/employee_performance/: labeling.yml
configs/datasets/student_placement/: dataset.yml  (+2 more)
docs/: contribution_metrics.md  data_dictionary_bridge_conditions.md  design.md  feature_analysis.md  power_indices_design.md
docs/datasets/: academic_success.md  credit_g.md  employee_performance.md  student_placement.md  wine.md
docs/models/: crop_policy_game_table.md  game_table.md  lexcel.md
logs/: crop_full_with_empty.out  crop_game_table_full.out
src/bci_osxai/: game_table.py
tests/: test_coalition_heatmap.py  test_crop_policy_game_table.py  test_dataset_pipeline_paths.py  test_empty_baseline.py  test_feature_analysis.py  test_game_table_plots.py  test_weak_order.py
(+59 files in other folders)
